--- a/core3/property-impl/trunk/pom.xml
+++ b/core3/property-impl/trunk/pom.xml
@@ -27,6 +27,33 @@
 		<url>http://chianti.ucsd.edu/svn/core3/property-impl/trunk</url>
 	</scm>
 
+    <repositories>
+        <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
+        <repository>
+            <id>cytoscape_snapshots</id>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <name>Cytoscape Snapshots</name>
+            <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <!-- bootstrap for cytoscape dependencies, namely the parent POM releases -->
+        <repository>
+            <id>cytoscape_releases</id>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <name>Cytoscape Releases</name>
+            <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -68,7 +95,7 @@
 		<dependency>
             <groupId>org.cytoscape</groupId>
             <artifactId>session-api</artifactId>
-            <version>3.0.0-alpha2-SNAPSHOT</version>
+            <version>3.0.0-alpha2</version>
         </dependency>
 		<dependency>
 			<groupId>junit</groupId>
