--- a/core3/network-analyzer-impl/trunk/pom.xml
+++ b/core3/network-analyzer-impl/trunk/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.cytoscape</groupId>
@@ -8,7 +7,7 @@
 	</parent>
 
 	<artifactId>network-analyzer-impl</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>3.0.0-alpha1</version>
 	<packaging>bundle</packaging>
 	<name>NetworkAnalyzer</name>
 
@@ -18,9 +17,9 @@
 	</properties>
 
     <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/network-analyzer-impl/trunk</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/network-analyzer-impl/trunk</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/network-analyzer-impl/trunk</url>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/network-analyzer-impl/tags/network-analyzer-impl-3.0.0-alpha1</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/network-analyzer-impl/tags/network-analyzer-impl-3.0.0-alpha1</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/network-analyzer-impl/tags/network-analyzer-impl-3.0.0-alpha1</url>
     </scm>
 
 	<build>
