--- a/core3/network-analyzer-impl/trunk/pom.xml
+++ b/core3/network-analyzer-impl/trunk/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
 
 	<artifactId>network-analyzer-impl</artifactId>
-	<version>3.0.0-alpha1</version>
+	<version>3.0.0-alpha2-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>NetworkAnalyzer</name>
 
@@ -17,9 +17,9 @@
 	</properties>
 
     <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/network-analyzer-impl/tags/network-analyzer-impl-3.0.0-alpha1</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/network-analyzer-impl/tags/network-analyzer-impl-3.0.0-alpha1</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/network-analyzer-impl/tags/network-analyzer-impl-3.0.0-alpha1</url>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/network-analyzer-impl/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/network-analyzer-impl/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/network-analyzer-impl/trunk</url>
     </scm>
 
 	<build>
