--- a/core3/table-import-impl/trunk/pom.xml
+++ b/core3/table-import-impl/trunk/pom.xml
@@ -9,7 +9,7 @@
 	<modelVersion>4.0.0</modelVersion>
     <groupId>org.cytoscape</groupId>
     <artifactId>table-import-impl</artifactId>
-	<version>3.0.0-alpha1</version>
+	<version>3.0.0-alpha2-SNAPSHOT</version>
 
 	<properties>
 		<bundle.symbolicName>org.cytoscape.table-import-impl</bundle.symbolicName>
@@ -21,9 +21,9 @@
 	<packaging>bundle</packaging>
 
     <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/table-import-impl/tags/table-import-impl-3.0.0-alpha1</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/table-import-impl/tags/table-import-impl-3.0.0-alpha1</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/table-import-impl/tags/table-import-impl-3.0.0-alpha1</url>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/table-import-impl/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/table-import-impl/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/table-import-impl/trunk</url>
     </scm>
 
 	<build>
