--- a/core3/manual-layout-impl/trunk/pom.xml
+++ b/core3/manual-layout-impl/trunk/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <groupId>org.cytoscape</groupId>
     <artifactId>parent</artifactId>
-    <version>3.0.0-alpha3</version>
+    <version>3.0.0-alpha4</version>
   </parent>
 
   <artifactId>manual-layout-impl</artifactId>
   <packaging>bundle</packaging>
   <name>Manual Layout</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>3.0.0-alpha1</version>
 
   <properties>
     <bundle.symbolicName>org.cytoscape.manual-layout-impl</bundle.symbolicName>
@@ -17,9 +17,9 @@
   </properties>
 
   <scm>
-    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/manual-layout-impl/trunk</connection>
-    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/manual-layout-impl/trunk</developerConnection>
-    <url>http://chianti.ucsd.edu/svn/core3/manual-layout-impl/trunk</url>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/manual-layout-impl/tags/manual-layout-impl-3.0.0-alpha1</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/manual-layout-impl/tags/manual-layout-impl-3.0.0-alpha1</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/manual-layout-impl/tags/manual-layout-impl-3.0.0-alpha1</url>
   </scm>
 
   <build>
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>math-xform</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha1</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
@@ -76,7 +76,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>swing-application-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha1</version>
     </dependency>
   </dependencies>
 
