--- a/core3/manual-layout-impl/trunk/pom.xml
+++ b/core3/manual-layout-impl/trunk/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>manual-layout-impl</artifactId>
   <packaging>bundle</packaging>
   <name>Manual Layout</name>
-  <version>3.0.0-alpha1</version>
+  <version>3.0.0-alpha2-SNAPSHOT</version>
 
   <properties>
     <bundle.symbolicName>org.cytoscape.manual-layout-impl</bundle.symbolicName>
@@ -17,9 +17,9 @@
   </properties>
 
   <scm>
-    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/manual-layout-impl/tags/manual-layout-impl-3.0.0-alpha1</connection>
-    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/manual-layout-impl/tags/manual-layout-impl-3.0.0-alpha1</developerConnection>
-    <url>http://chianti.ucsd.edu/svn/core3/manual-layout-impl/tags/manual-layout-impl-3.0.0-alpha1</url>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/manual-layout-impl/trunk</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/manual-layout-impl/trunk</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/manual-layout-impl/trunk</url>
   </scm>
 
   <build>
