--- a/core3/search-impl/trunk/pom.xml
+++ b/core3/search-impl/trunk/pom.xml
@@ -3,24 +3,31 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
-	<properties>
-		<bundle.symbolicName>org.cytoscape.search-impl</bundle.symbolicName>
-		<bundle.namespace>org.cytoscape.search</bundle.namespace>
-	</properties>
-
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>3.0.0-alpha3</version>
+		<version>3.0.0-alpha4</version>
 	</parent>
+
 	<modelVersion>4.0.0</modelVersion>
     <groupId>org.cytoscape</groupId>
     <artifactId>search-impl</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
+	<properties>
+		<bundle.symbolicName>org.cytoscape.search-impl</bundle.symbolicName>
+		<bundle.namespace>org.cytoscape.search</bundle.namespace>
+	</properties>
+
 	<name>${bundle.symbolicName} [${bundle.namespace}]</name>
 
 	<packaging>bundle</packaging>
+
+    <scm>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/search-impl/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/search-impl/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/search-impl/trunk</url>
+    </scm>
 
 	<build>
 		<!-- Cytoscape requires Java 1.6 -->
@@ -89,17 +96,17 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<version>3.0.0-alpha2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
-			<version>3.0.0-alpha3-SNAPSHOT</version>
+			<version>3.0.0-alpha3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>core-task-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<version>3.0.0-alpha2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
@@ -115,28 +122,20 @@
 		<dependency>
     		<groupId>org.cytoscape</groupId>
     		<artifactId>swing-application-api</artifactId>
-    		<version>1.0-SNAPSHOT</version>
+    		<version>3.0.0-alpha1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>work-swing-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 		</dependency>
-    
-
 
 		<!-- dependencies specifically for unit testing -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.4</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>test-support</artifactId>
-			<version>1.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
